<resources>
    <string name="app_name">calculator</string>
    <string name="input_number">Input Number</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_dot">.</string>
    <string name="_0">0</string>
    <string name="result">=</string>
    <string name="ac">AC</string>
    <string name="c">C</string>
    <string name="x">X</string>
    <string name="wari">-</string>
    <string name="plus">+</string>
    <string name="_9">9</string>
    <string name="wari2">/</string>
</resources>
